# business-mgm

./: .gitignore  Procfile  create_site.sh  deploy_bench.sh  deploy_new_site.sh  deploy_remote.sh  deployment_log.txt  generate_keys.py  link_production_apps.sh  query_packages.py  query_web_pages.py  run_all.sh  run_query.sh  setup_server.sh
.github/workflows/: deploy.yml
apps/business_management/: README.md  pyproject.toml
apps/insight_nexus/: README.md  __init__.py  install.sh  pyproject.toml
apps/insight_nexus/insight_nexus/: hooks.py  modules.txt
apps/insight_nexus/insight_nexus/insight_nexus/api/: __init__.py  check_in.py
apps/insight_nexus/insight_nexus/insight_nexus/doctype/: __init__.py
apps/insight_nexus/insight_nexus/insight_nexus/doctype/jv_partner/: jv_partner.json  jv_partner.py
apps/insight_nexus/insight_nexus/insight_nexus/doctype/nexus_check_in/: __init__.py  nexus_check_in.json  nexus_check_in.py
apps/insight_nexus/insight_nexus/insight_nexus/doctype/payment_voucher/: payment_voucher.json  payment_voucher.py
apps/insight_nexus/insight_nexus/insight_nexus/doctype/payment_voucher_item/: payment_voucher_item.json  payment_voucher_item.py
apps/insight_nexus/insight_nexus/insight_nexus/tests/: test_checkin.py
apps/insight_nexus/insight_nexus/www/: check-in.html  checkin.html  dashboard.html
apps/umrah_management/: .pre-commit-config.yaml  README.md  pyproject.toml
config/: nginx.conf  redis_cache.conf  redis_queue.conf  redis_socketio.conf  supervisor.conf
sites/: apps.json  apps.txt  output.html
sites/26i.uk/: erpnext.localhost
(+30 files in other folders)
