[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "insight-nexus"
version = "1.0.0"
authors = [{name = "IICC", email = "dev@iicc.sa"}]
description = "Multi-sector remote employee check-in and attendance system integrated with ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dynamic = []

dependencies = [
    "frappe",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/iicc/insight-nexus"
